# Polyp-Segmentation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_SPEC.md  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml  ml-smoke-test.yaml
configs/: defaults.yaml
configs/data/: kvasir.yaml
configs/eval/: default.yaml
configs/model/: unet_resnet34.yaml
configs/train/: default.yaml
data/: raw.dvc
data/splits_smoke/: meta.json  train.csv  val.csv
great_expectations/expectations/: .ge_store_backend_id  raw_kvasir_suite_tmp.json  suite_tmp2.json
great_expectations/uncommitted/validations/: .ge_store_backend_id
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  raw_kvasir_suite.json
src/: train.py
src/data/: make_smoke_splits.py  make_splits.py  validate_data.py
