[tool.poetry]
name = "kvasir-seg"
version = "0.1.0"
description = ""
authors = ["Will <xenoproboscizoid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "<2.2"
great-expectations = "^1.6.2"
dvc = "^3.63.0"
mlflow = "^3.4.0"
torch = "^2.8.0"
torchvision = "^0.23.0"
albumentations = "^2.0.8"
segmentation-models-pytorch = "^0.5.0"
torchmetrics = "^1.8.2"
dvc-s3 = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.1"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
# Match project Python target
target-version = "py312"

[tool.ruff.lint]
# Enable import sorting (isort replacement)
extend-select = ["I"]
